fix: menu alignment partially

--- a/src/Component/menu/menuDisplay.css
+++ b/src/Component/menu/menuDisplay.css
@@ -1,16 +1,14 @@
 #theContainer{
 
     /* background-color: rgb(255, 255, 0); */
-    display:block;
-    border: solid 1px pink;;
+    /* display:block; */
+    /* border: solid 1px pink; */
 }
 
 #contenta{
-    
-    /* background-color: rgb(255, 255, 255); */
-    display:inline;
+    display:inline-block;
+    width:95%;
     padding:5px;
-    /* width:35%; */
     margin:10px;
 }
 
